--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "22.5.1",
     "@types/react": "18.3.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.5.4"
   }
 }
