--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.4",
+    "multi-range-slider-react": "^2.0.7",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
