--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
     "react-toastify": "^10.0.5",
-    "swiper": "^11.1.12"
+    "swiper": "^11.1.12",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@types/node": "22.5.1",
