--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "axios": "^1.7.4",
     "multi-range-slider-react": "^2.0.7",
     "next": "14.2.5",
@@ -19,7 +20,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-toastify": "^10.0.5",
     "swiper": "^11.1.12",
-    "zod": "^3.23.4"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "22.5.1",
