--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
     "react-toastify": "^10.0.5",
+    "sweetalert2": "^11.14.0",
     "swiper": "^11.1.12",
     "zod": "^3.23.8"
   },
